[workspace]
members = ["python", "sender"]

[package]
name = "super_simple_mesh_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
smooth-bevy-cameras = "0.8.0"
ndarray = { version = "0.15.6", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.71"
thiserror = "1.0.40"
serde_json = "1.0.97"
# tokio = { version = "1.28.2", features = ["rt"] }
