[package]
name = "ssmv"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ssmv"
crate-type = ["cdylib"]

[dependencies]
super_simple_mesh_viewer = { path = ".." }
pyo3 = { version = "0.19.0", features = ["extension-module", "abi3-py37"] }
numpy = "0.19.0"
